# dioxus-e-commerce

./: .gitignore  Cargo.toml  Dioxus.toml  input.css  netlify.toml  package-lock.json  package.json
assets/: tailwind.css
assets/styling/: main.css
src/: api.rs  main.rs  scroll.rs
src/components/: cart_item.rs  hero.rs  mod.rs  navbar.rs  product_container.rs  product_item.rs  sidebar.rs
src/views/: home.rs  mod.rs  product.rs
