[package]
name = "dioxus-e-commerce"
version = "0.1.0"
authors = ["Dominick DeLorenzo <49847428+domdelorenzo@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = ["router", "fullstack"] }
dioxus-free-icons = { version = "0.9.0", features = ["bootstrap", "feather", "ionicons"] }
dioxus-sdk = "0.6.0"
dioxus-signals = "0.6.3"
gloo = "0.11.0"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219" }
wasm-bindgen = "0.2.100"
web-sys = "0.3.77"

[target.'cfg(target_family = "wasm")'.dependencies]
chrono = { version = "0.4.38", features = ["serde", "wasmbind"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
chrono = { version = "0.4.38", features = ["serde"] }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server"]


[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
